/*
 * $Id: ChangeLog,v 1.3010 2004/05/31 01:09:39 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-30 23:35 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * source/rtl/tget.prg
    ! minor fix to an small issue i've forget, thanks for Pritpal for reminding

2004-05-30 22:00 UTC-0300 Luiz Rafael Culik<culikr / at /brturbo.com >
  * contrib/hbzlib/include/zipstring.h
    ! minor fix to allow compile with cbuilder 6

2004-05-28 13:39 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/exproptb.c
  * source/compiler/exproptc.c
  * include/hbexprb.c
  * include/hbexprc.c
    ! Fixed HB_P_LOCALNEAR* optimization on for locals in range 0-127

  * source/vm/hvm.c
    ! HB_P_PUSHLOACL and HB_P_POPLOCAL to use HB_PCODE_MKSHORT() instead of HB_PCODE_MKUSHORT
    ! Fixed hb_vmFrame() to accept unsigned int, instead of BYTE

  * include/hbpcode.h
  * source/compiler/genc.c
  * source/compiler/harbour.c
  * source/compiler/hbfix.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
    + Added support for new HB_P_LARGEFRAME to fix bug when function has more than 255 LOCALs

2004-05-31 00:35 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * make_drw.sh
  * bin/hb-func.sh
  * config/darwin/gcc.cf
  * config/darwin/global.cf
    ! Fixes to compilation on Darwin.
  * include/thread.h
    ! Fixed a bug which I introduced in my previous commit (thanks, Przemyslaw!).
    + Added recursive mutexes emulation for platforms that don't have
      recursive mutexes (e.g., Darwin 5.5.2).

2004-05-30 01:50 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * bin/hb-func.sh
  * bin/postinst.sh
    ! Changed "pushd" and "popd" commands to "(cd" and ")" to improve
      compatibility.

2004-05-28 17:25 UTC-0800 Luis Krause Mantilla
  * contrib/rdd_ads/adsfunc.c
    * restored Brian's fix to the gpf issue
